20130928 debugger/breakpoint.[c|h],spectrum.c: fix time breakpoints later than
         a frame (fixes bug #302) (Sergio).
20130928 ui/win32/options.pl: ignore unused-but-set-variable warnings for
         option dialogs on win32 UI (Sergio).
20130928 Makefile.am,compat/{Makefile.am,win32/distribution.mk}: take Windows
         distribution rules out of main Makefile.am (Sergio).
20130929 keysyms.pl: fix warnings about uninitialized values in `make distcheck'
         (Sergio).
20130929 configure.ac: don't check for svgalib UI if another UI has been
         selected (Sergio).
20130929 configure.ac: make win32 UI default for mingw32/64 toolchains (Sergio).
20130929 configure.ac: link to autoload snapshot for NTSC Spectrum (Sergio).
20131006 configure.ac: don't warn about unrequested sound libraries that have
         not been found (Sergio).
20131007 data/Makefile.am: fix desktop integration rules to cope with VPATH
         builds (Sergio).
20131013 configure.ac,Makefile.am,compat/{Makefile.am,amiga/Makefile.am,
         linux/Makefile.am,morphos/Makefile.am,unix/Makefile.am,wii/Makefile.am,
         win32/Makefile.am}: use 'subdir-objects' option as advised by automake
         1.14 to place object files in subdirectories (patch #317) (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131016 debugger/{command.c,commandl.l}: add I and R setting and getting to the
         debugger (patch #319) (Sergio).
20131209 man/fuse.1: document more movie options (Sergio).
20131215 keyboard.c,machines/specplus3.[ch],
         peripherals/disk/{beta.[ch],disciple.[ch],opus.[ch],plusd.[ch]}:
         remove clang tautological-constant-out-of-range-compare warnings by
         moving sentinels into enums and not assigning non-enum values to enum
         variables (Fred).
20131215 compat/{amiga,linux,morphos,unix,wii,win32}: add Makefile.in and
         Makefile to the ignore property (Fred).